tests/codegen/fail/object/attr_field_non_output_return_type.stderr
error[E0277]: the trait bound `ObjB: IsOutputType<__S>` is not satisfied
  --> fail/object/attr_field_non_output_return_type.rs:12:21
   |
12 |     fn id(&self) -> ObjB {
   |                     ^^^^ the trait `IsOutputType<__S>` is not implemented for `ObjB`
   |
   = help: the following other types implement trait `IsOutputType<S>`:
             <bool as IsOutputType<__S>>
             <i32 as IsOutputType<__S>>
             <f64 as IsOutputType<__S>>
             <ObjA as IsOutputType<__S>>
             <Box<T> as IsOutputType<S>>
             <uuid::Uuid as IsOutputType<__S>>
             <url::Url as IsOutputType<__S>>
             <bson::datetime::DateTime as IsOutputType<__S>>
           and $N others
